exports[`common/component/module/cornerstone/itemEducation should render correctly 1`] = `
<li
  className="m-cornerstone__item"
  itemProp="itemListElement"
  itemScope={true}
  itemType="https://schema.org/EducationEvent">
  <div
    className="m-cornerstone__description">
    <div
      className="m-cornerstone__description-content">
      <h4
        className="is-centered c-type--h4 m-cornerstone__headline"
        itemProp="name">
        Headline item education
      </h4>
      <p
        className="c-type--p m-cornerstone__company"
        itemProp="alternateName">
        <strong>
          Lead  item education
        </strong>
      </p>
      <p
        className="c-type--p m-cornerstone__time">
        (
        <time
          className="c-time"
          itemProp="startDate">
          20161212
        </time>
         - 
        <time
          className="c-time"
          itemProp="endDate">
          20161224
        </time>
        )
      </p>
      <p
        className="c-type--p m-cornerstone__text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description item education 1",
          }
        }
        itemProp="description" />
      <p
        className="c-type--p m-cornerstone__text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description item education 2",
          }
        }
        itemProp="description" />
    </div>
  </div>
  <div
    className="m-cornerstone__bubble" />
  <div
    hidden={true}
    itemProp="location"
    itemScope={true}
    itemType="https://schema.org/Place">
    <meta
      content={undefined}
      itemProp="name" />
    <div
      itemProp="address"
      itemScope={true}
      itemType="http://schema.org/PostalAddress">
      <meta
        content={undefined}
        itemProp="streetAddress" />
      <meta
        content={undefined}
        itemProp="addressLocality" />
      <meta
        content={undefined}
        itemProp="sameAs" />
    </div>
  </div>
</li>
`;

exports[`common/component/module/cornerstone/itemEducation should render cssModifier and offset if passed 1`] = `
<li
  className="m-cornerstone__item--education has-offset--100"
  itemProp="itemListElement"
  itemScope={true}
  itemType="https://schema.org/EducationEvent">
  <div
    className="m-cornerstone__description">
    <div
      className="m-cornerstone__description-content">
      <h4
        className="is-centered c-type--h4 m-cornerstone__headline"
        itemProp="name">
        Headline item education
      </h4>
      <p
        className="c-type--p m-cornerstone__company"
        itemProp="alternateName">
        <strong>
          Lead  item education
        </strong>
      </p>
      <p
        className="c-type--p m-cornerstone__time">
        (
        <time
          className="c-time"
          itemProp="startDate">
          20161212
        </time>
         - 
        <time
          className="c-time"
          itemProp="endDate">
          20161224
        </time>
        )
      </p>
      <p
        className="c-type--p m-cornerstone__text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description item education 1",
          }
        }
        itemProp="description" />
      <p
        className="c-type--p m-cornerstone__text"
        dangerouslySetInnerHTML={
          Object {
            "__html": "Description item education 2",
          }
        }
        itemProp="description" />
    </div>
  </div>
  <div
    className="m-cornerstone__bubble" />
  <div
    hidden={true}
    itemProp="location"
    itemScope={true}
    itemType="https://schema.org/Place">
    <meta
      content={undefined}
      itemProp="name" />
    <div
      itemProp="address"
      itemScope={true}
      itemType="http://schema.org/PostalAddress">
      <meta
        content={undefined}
        itemProp="streetAddress" />
      <meta
        content={undefined}
        itemProp="addressLocality" />
      <meta
        content={undefined}
        itemProp="sameAs" />
    </div>
  </div>
</li>
`;
